Add Docker ignore file, update Django views and URLs, configure environment variables, and refine Docker Compose settings

--- a/back/docker-compose.yml
+++ b/back/docker-compose.yml
@@ -2,9 +2,9 @@ services:
   postgres_api:
     image: postgres:16
     environment:
-      - POSTGRES_DB=db_has
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
     ports:
       - "5432:5432"
     expose:
@@ -17,10 +17,10 @@ services:
           - localhost
     volumes:
       - db_data:/var/lib/postgresql/data
-  api_has:
+  api_repo:
     build: .
-    # command: python manage.py runserver 0.0.0.0:8000 #without debugpy vscode
-    command:  python -m debugpy --listen 0.0.0.0:5678 --wait-for-client manage.py runserver 0.0.0.0:8000 #with debugpy vscode
+    command: /bin/bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000" #without debugpy vscode
+    # command:  python -m debugpy --listen 0.0.0.0:5678 --wait-for-client manage.py runserver 0.0.0.0:8000 #with debugpy vscode
     volumes:
       - .:/code
     ports:
@@ -30,7 +30,7 @@ services:
       - postgres_api
     links:
       - postgres_api:postgres_api
-    container_name: api_has
+    container_name: api_repo
     networks:
       - some_network
 
