--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -3,6 +3,6 @@ djangorestframework>=3.14.0
 django-environ>=0.10.0
 django-cors-headers>=4.2.0
 djangorestframework-simplejwt>=5.2.2
-
+psycopg==3.2.9
 
 ruff>=0.1.5 #format code python
