refactor: replace pip for uv

--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -1,8 +1,18 @@
-FROM python:3.13
+FROM python:3.13-slim
 ENV PYTHONUNBUFFERED 1
+
+# Install uv
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
+
 RUN mkdir /code
 WORKDIR /code
-COPY . /code/
-RUN pip install -r requirements.txt
+COPY pyproject.toml /code/
+
+# Install dependencies with uv
+RUN uv sync
+
 # Install debugpy
-RUN pip install debugpy
+RUN uv pip install --system debugpy
+
+COPY . /code/
+
